[package]
name = "nannou_ex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou = "0.18.1"

# enable incremental build

[profile.dev]
incremental = true

[profile.release]
incremental = true
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"